FEAT: Search Restaurant Complete + Add Loader for Fallback

--- a/demo.html
+++ b/demo.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <div>
-        <div>
-            <div>
-                {info.itemAttribute.verClassifier == "VEG" ?}Color Code
-            </div>
-            <div>
-                <div>Tree Shape</div>
-                <div>Price</div>
-            </div>
-            <div>Serve 1</div>
-        </div>
-        <div>
-            <img>
-        </div>
-    </div>
-</body>
+  </head>
+  <body>
+    <!-- <svg
+      class="w-4 h-4 text-gray-500"
+      aria-hidden="true"
+      xmlns="http://www.w3.org/2000/svg"
+      fill="none"
+      viewBox="0 0 20 20"
+    >
+      <path
+        stroke="currentColor"
+        strokeLinecap="round"
+        strokeLinejoin="round"
+        strokeWidth="2"
+        d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"
+      />
+    </svg> -->
+  </body>
 </html>
